Fixed issue where left align was not aligning to the groups edge.

--- a/src/App.css
+++ b/src/App.css
@@ -493,7 +493,7 @@ flex-direction: row;
 }
 
 .titleDiv {
-  poition: absolute;
+  position: absolute;
   display: flex;
   flex-direction: row;
   z-index: 17;
@@ -766,7 +766,7 @@ dropbtn {
 #exportButton{
   padding-top: 5px;
   padding-left: 5px;
-  background-color #ece9e9;
+  background-color: #ece9e9;
   color: black;
   cursor: pointer;
 }
